Fixed an input box that was too wide.

--- a/assets/pages/bundles-landing/support-landing-ab-test/supportLanding.scss
+++ b/assets/pages/bundles-landing/support-landing-ab-test/supportLanding.scss
@@ -450,7 +450,11 @@
 
   .component-contribution-selection--monthly {
     .component-number-input, .component-error-message {
-      width: 317px;
+      width: 100%;
+
+      @include mq($from: mobileMedium) {
+        width: 317px;
+      }
     }
   }
 
